kubeapi-service-account/k3s-ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: k3s
  namespace: traefik
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`k3s-cloud.ucdialplans.com`) 
    kind: Rule
    services:
    - name: kubernetes
      namespace: default
      port: 443
      serversTransport: k3s-root
    middlewares:
    - name: traefik-security
      namespace: traefik
  tls:
    secretName: traefik-wildcard-cert
    options:
     name: tls-options-default
     namespace: traefik
